# fpl

./: .dockerignore  Dockerfile  Makefile  README.md  justfile  pyproject.toml
.github/workflows/: push.yml
src/: main.py
src/BayesianModels/: DEFModel.py  GKModel.py  MIDModel.py  Model.py  STRModel.py  data_models.py
src/DataIngester/: get_data.py
src/DataProcessor/: process_data.py
src/MonteCarlo/: monte_carlo_sim.py  utils.py
tests/src/: test_get_data.py
tests/src/DataIngester/: test_get_data.py
