[project]
name = "fpl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "black>=26.1.0",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "polars>=1.37.1",
    "pymc>=5.26.1",
    "requests>=2.32.5",
    "ruff>=0.14.14",
    "scikit-learn>=1.8.0",
]
