[project]
name = "fpl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "black>=26.1.0",
    "mkl-service>=2.6.1",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "pydantic-numpy>=8.0.1",
    "pymc>=5.26.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "ruff>=0.14.14",
    "scikit-learn>=1.8.0",
    "spyder-kernels>=3.1.2",
]
